# SmartSecurityCamera

./: .gitignore  README.md
WatchfulEye/Camera/: CMakeLists.txt
WatchfulEye/Camera/CameraLib/: CMakeLists.txt  Camera.cpp  Camera.h  Logging.h  ReadConfigCamera.cpp  ReadConfigCamera.h  config.json
WatchfulEye/Camera/CameraProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Camera/CameraTest/: CMakeLists.txt  cmpFrames.cpp
WatchfulEye/Camera/CameraUI/: CMakeLists.txt  CameraThread.cpp  CameraThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WatchfulEye/Camera/Service/: CMakeLists.txt
WatchfulEye/Camera/Service/myproto/: frameVideo.proto
WatchfulEye/Server/: CMakeLists.txt
WatchfulEye/Server/ServerLib/: CMakeLists.txt  Logging.cpp  Logging.h  Queue.cpp  Queue.h  ReadConfigServer.cpp  ReadConfigServer.h  Server.cpp  Server.h  ServerService.cpp  ServerService.h  Sqlite.cpp  Sqlite.h  Yolo.cpp  Yolo.h  config.json
WatchfulEye/Server/ServerProcess/: CMakeLists.txt  main.cpp
WatchfulEye/Server/ServerTest/: CMakeLists.txt  calcAvg.cpp  improveQueue.cpp  protectedQueue.cpp
WatchfulEye/Server/ServerUI/: CMakeLists.txt  ServerThread.cpp  ServerThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
